[project]
name = "sentiment-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "nltk>=3.9.1",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.1",
    "wordcloud>=1.9.4",
]
